<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GolfApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="New_Round">New Round</string>
    <string name="Previous_Rounds">Previous Rounds</string>
    <string name="Stats">Stat Tracker</string>
    <string name="MeasureShot">Measure Shot</string>

    <color name="BackgroundBlue">#1E90FF</color>
    <color name="Green">#00FF00</color>

    <string name="title_activity_stats">StatsActivity</string>

    <color name="white">#FFFFFF</color>

    <string name="back">Back</string>
    <string name="clubsStats">Clubs Stats</string>
    <string name="courseStats">Course Stats</string>
    <string name="shortGameStatsButton">Short Game Stats</string>
    <string name="gameStatsButton">Game Stats</string>
    <string name="stats">Stats</string>
    <string name="title_activity_new_round">NewRoundActivity</string>
    <string name="newRound">New Round</string>

    <string-array name="holes18or9">
        <item>18 Holes</item>
        <item>9 Holes</item>
    </string-array>

    <string name="bag">Golf Club Bag</string>
    <string name="course">Course:</string>
    <string name="tee">Tee:</string>
    <string name="date">"Date: "</string>
    <string name="holes">"Holes: "</string>
    <string name="startingOn">"Starting On: "</string>
    <string name="nine">"Starting On: "</string>
    <string name="player">"Other Players: "</string>

    <dimen name="NewRoundLayoutDim">32dp</dimen>

    <string name="changeDate">Change Date</string>
    <string name="dummyDate">MM-DD-YYYY</string>

    <string-array name="otherPlayers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="frontBack">
        <item>Front Nine</item>
        <item>Back Nine</item>
    </string-array>

    <string name="startRound">Start Round</string>
    <string name="player1">"Player 1: "</string>
    <string name="player2">"Player 2: "</string>
    <string name="player3">"Player 3: "</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prevHole">Previous</string>
    <string name="next">Next</string>
    <string name="prevRounds">Previous Tee Shots</string>
    <string name="selectClub">Tee Shot Club</string>
    <string name="title_activity_clubs">ClubsActivity</string>
    <string name="title_activity_gps">GPSActivity</string>

    <color name="Black">#000000</color>
    <color name="Blue">#0000FF</color>
    <color name="Red">#FF0000</color>
    <color name="Black_partial_transparent">#70000000</color>

    <string-array name="FullShotShapes">
        <item>--Enter Shot Shape--</item>
        <item>Slice</item>
        <item>Fade</item>
        <item>Straight</item>
        <item>Draw</item>
        <item>Hook</item>
    </string-array>
    <string-array name="FullShotDirections">
        <item>--Enter Shot Direction--</item>
        <item>On Target</item>
        <item>Left</item>
        <item>Right</item>
        <item>Short</item>
        <item>Long</item>
    </string-array>
    <string-array name="FullShotSurfaces">
        <item>--Enter Surface--</item>
        <item>Tee</item>
        <item>Fairway</item>
        <item>Rough</item>
        <item>Sand</item>
        <item>Pine</item>
        <item>Other</item>
    </string-array>
    <string-array name="ShotGameShotTypes">
        <item>--Enter Shot Type--</item>
        <item>Chip</item>
        <item>Pitch</item>
        <item>Bunker</item>
    </string-array>
    <string-array name="ShortGameStartDistances">
        <item>--Enter Start Distance--</item>
        <item>76+ Yards</item>
        <item>51-75 Yards</item>
        <item>36-50 Yards</item>
        <item>21-35 Yards</item>
        <item>10-20 Yards</item>
        <item>Under 10 Yards</item>
    </string-array>

    <string name="title_activity_short_game_tracker">ShortGameTrackerActivity</string>
    <string name="endDistancePrompt">Enter End Distance</string>
    <string name="title_activity_shot_tracker">ShotTrackerActivity</string>
    <string name="title_activity_club_stats">ClubStatsActivity</string>
    <string name="endRound">End Round</string>
    <string name="title_activity_course_stats">CourseStatsActivity</string>
    <string name="title_activity_round">RoundActivity</string>
    <string name="title_activity_score_card">ScoreCardActivity</string>
    <string name="title_activity_make_round">MakeRoundActivity</string>
    <string name="title_activity_short_game_stats">ShortGameStatsActivity</string>
    <string name="title_activity_bunker_stats">BunkerStatsActivity</string>
    <string name="title_activity_table">TableActivity</string>

</resources>