<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/debugTextViewHoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/player1EditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/player1" />

        <EditText
            android:id="@+id/player1EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/debugTextViewHoles"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </RelativeLayout>>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/debugTextViewHoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/player2EditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/player2" />

        <EditText
            android:id="@+id/player2EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/debugTextViewHoles"
            android:layout_weight="1"
            android:ems="10" >
        </EditText>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/debugTextViewHoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/player3EditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/player3" />

        <EditText
            android:id="@+id/player3EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/debugTextViewHoles"
            android:layout_weight="1"
            android:ems="10" >

            
        </EditText>

    </RelativeLayout>

</LinearLayout>