<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/prevHoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/prevHole" />

        <Button
            android:id="@+id/nextHoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/next" />

        <Spinner
            android:id="@+id/currentHoleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/prevHoleButton"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/nextHoleButton"
            android:layout_toRightOf="@+id/prevHoleButton" />
    </RelativeLayout>

    <TextView
        android:id="@+id/holeInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hole Info Here" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.99"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/RelativeLayoutLeft"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_weight="1" >
            
             <TextView
                 android:id="@+id/trackShotTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="19dp"
                 android:layout_marginTop="14dp" />

            <Button
                android:id="@+id/trackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/trackShotTextView"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="14dp"
                android:text="Track Shot" />

            <Button
                android:id="@+id/shortGameTrackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/trackButton"
                android:layout_below="@+id/trackButton"
                android:layout_marginTop="22dp"
                android:text="Track Short Game" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayoutRight"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/puttsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/scoreNumberPicker"
                android:text="Putts"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/greenFrontTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="Score"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/fairwayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/greenCheckBox"
                android:layout_alignBottom="@+id/greenCheckBox"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/greenCheckBox"
                android:text="Fairway" />

            <CheckBox
                android:id="@+id/greenCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/puttsNumberPicker"
                android:text="Green" />

            <NumberPicker
                android:id="@+id/scoreNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/greenFrontTextView"
                android:orientation="vertical" />

            <NumberPicker
                android:id="@+id/puttsNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/puttsTextView" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/previousRoundsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/prevRounds" />

        <Button
            android:id="@+id/gpsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="GPS Map" />
    </RelativeLayout>

</LinearLayout>